# NexusHub-Windows

./: NexusExecutor.py  NexusExecutor.spec  README.md  README.txt  installer.bat
Setup/: Python_Setup.py  dependencies_installer.spec
assets/: script_library.json  theme.css
config/: setting.json
scripts/games/: arsenal.lua  bedwars.lua  blox_fruit.lua  forsaken_nexus.lua  jjs_nexus.lua  rivals_nexus.lua
scripts/tools/: anti_afk.lua  esp.lua
scripts/universal/: cmd_x.lua  infinite_yield.lua
src/: CMakeLists.txt  README_CPP.md  main.cpp
src/core/: executor.cpp  executor.h
src/hooks/: hooks.cpp  hooks.h
src/injector/: injection.cpp  injection.h
src/memory/: memory.cpp  memory.h
src/utils/: utils.cpp  utils.h
